--- a/src/components/SortControl/index.module.scss
+++ b/src/components/SortControl/index.module.scss
@@ -1,6 +1,8 @@
 .sortDiv {
   cursor: pointer;
   text-transform: uppercase;
+  display: flex;
+  align-items: center;
 }
 
 .label {
